[gd_scene load_steps=2 format=3 uid="uid://baabchr6uwr3k"]

[ext_resource type="Script" path="res://UI/debug_window/debug_window.gd" id="1_2ktgr"]

[node name="DebugWindow" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ktgr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/VBoxContainer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="SubItemListContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubitemList" type="ItemList" parent="HBoxContainer/SubItemListContainer"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[connection signal="empty_clicked" from="HBoxContainer/ItemList" to="." method="_on_item_list_empty_clicked"]
[connection signal="item_selected" from="HBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer" to="." method="_on_v_box_container_gui_input"]
